// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline.js - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
btnActions[1] = () => (
  <button> test </button>
  // :testC
)

a(
  // ::
  1
);

=====================================output=====================================
btnActions[1] = () => (
  <button> test </button>
  // :testC
);

a(
  // ::
  1
);

================================================================================
`;

exports[`inline.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
btnActions[1] = () => (
  <button> test </button>
  // :testC
)

a(
  // ::
  1
);

=====================================output=====================================
btnActions[1] = () => (
  <button> test </button>
  // :testC
);

a(
  // ::
  1,
);

================================================================================
`;
